--- a/src/components/schedule/sidepanel/SidePanel.css
+++ b/src/components/schedule/sidepanel/SidePanel.css
@@ -15,7 +15,7 @@
     align-items: flex-start;
 }
 
-.day {
+.selected-day-title {
     color: var(--dark-blue);
     margin: 0 0 10px 0;
     padding: 0;
