--- a/src/components/schedule/sidepanel/SidePanel.css
+++ b/src/components/schedule/sidepanel/SidePanel.css
@@ -36,3 +36,11 @@ input[type=text] {
 input[type=text]:focus {
     outline: 1px solid var(--dark-blue);
 }
+
+.tasks-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+    height: 100%;
+}
