--- a/src/components/schedule/calendar/Calendar.css
+++ b/src/components/schedule/calendar/Calendar.css
@@ -77,6 +77,7 @@ button {
     &.hasTask::after {
         content: "";
         position: absolute;
+        top: 2px;
         right: 0;
         height: 5px;
         width: 5px;
