--- a/src/components/schedule/task/addtaskbutton/AddTaskButton.css
+++ b/src/components/schedule/task/addtaskbutton/AddTaskButton.css
@@ -1,13 +1,42 @@
 .add-task-container {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     background-color: white;
     height: 80px;
     width: 100%;
     border-radius: 8px;
     border: 1px solid var(--dark-blue);
     cursor: pointer;
+    color: var(--dark-blue)
+}
+
+.warning-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    gap: 10px;
+    color: red;
+}
+
+.progress-bar {
+    background-color: var(--red);
+    height: 5px;
+}
+
+.content {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.add-icon {
+    width: 25px;
+    height: 25px;
 }
 
 .text-content {
@@ -22,13 +51,16 @@
 
 input[type=text] {
     width: 100%;
-    border: 1px solid var(--dark-blue);
+    border: none;
     border-radius: 5px;
     color: var(--dark-blue);
-}
+    background-color: var(--white);
+    font-size: 14px;
+    padding-left: 5px;
 
-.title {
-    font-size: 16px;
+    &::placeholder {
+        color: #1919707b;
+    }
 }
 
 .icons-container {
@@ -52,9 +84,11 @@ input[type=text] {
     
     & .confirm-icon {
         background-color: var(--light-green);
+        border-top-right-radius: 8px;
     }
 
     & .remove-icon, .cancel-icon {
         background-color: var(--light-red);
+        border-bottom-right-radius: 8px;
     }
 }
