--- a/src/components/schedule/task/Task.css
+++ b/src/components/schedule/task/Task.css
@@ -1,6 +1,8 @@
 .task-content {
     display: flex;
     background-color: white;
+    justify-content: center;
+    align-items: center;
     height: 80px;
     width: 100%;
     border-radius: 8px;
@@ -8,10 +10,11 @@
     font-size: 16px;
 
     & .text-container {
-        display: flex;
         padding: 8px;
-        flex-direction: column;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
         color: var(--dark-blue);
 
         & .title {
@@ -22,12 +25,32 @@
             font-size: 14px;
             font-style: italic;
         }
+
+        & input[type=text]::placeholder {
+            color: #1919707b;
+        }
+    }
+
+    .warning-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        gap: 10px;
+        color: red;
+    }
+    
+    .progress-bar {
+        background-color: var(--red);
+        height: 5px;
     }
 
     & .icons-container {
         display: flex;
         flex-direction: column;
-        min-width: 60px;
+        width: 60px;
         height: 100%;
 
         & button {
