--- a/src/components/schedule/task/Task.css
+++ b/src/components/schedule/task/Task.css
@@ -10,10 +10,12 @@
     font-size: 16px;
 
     & .text-container {
-        display: flex;
+        /* this !important is here because theres a bug in Nextjs where display flex and width are removed on build */
+        /* https://github.com/vercel/next.js/discussions/52018 */
+        display: flex !important;
         flex-direction: column;
         padding: 8px;
-        width: 100%;
+        width: 100% !important;
         gap: 8px;
         color: var(--dark-blue);
 
